# ecu_platform

./: .gitattributes  .gitignore  CMakeLists.txt
src/: Frame.h  FrameQueue.h  Logger.h  main.cpp
src/QML/: BrandPage.qml  CANScannerBitratePage.qml  CANScannerECUPage.qml  CANScannerECUParametersPage.qml  CANScannerLogPage.qml  CANScannerMenuPage.qml  CANScannerParametersPage.qml  CANScannerShared.js  CANScannerTopBar.qml  InfoPage.qml  LanguageManager.qml  LanguagePage.qml  LanguageSettings.cpp  LanguageSettings.h  Main.qml  MainMenu.qml  Navigation.qml  SACDTCPage.qml  SACInitPage.qml  SACMainPage.qml  SACMenuPage.qml  SACSpeedPage.qml  SACTopBar.qml  SettingsPage.qml  StyledButton.qml  TestsPage.qml  Theme.qml  en.js  main.cpp  pl.js
src/QT_Bridge/: CockpitController.cpp  CockpitController.h
src/core/: CAN_Dispatcher.cpp  CAN_Dispatcher.h  CAN_FrameHandler.h  FrameQueue.h
src/ecu/sac/: IECU_Module.h  SAC_DTC_Module.cpp  SAC_DTC_Module.h  SAC_Module.cpp  SAC_Module.h  SAC_Runtime_Module.cpp  SAC_Runtime_Module.h
src/isotp/: ISOTP.cpp  ISOTP.h
src/scanner/: CANScannerEngine.cpp  CANScannerEngine.h
src/system/: SystemController.cpp  SystemController.h
src/transport/: ITransport_CAN.h  Transport_CAN_Linux.cpp  Transport_CAN_Linux.h
src/uds/: UDS_Client.cpp  UDS_Client.h  UDS_Core.cpp  UDS_Core.h
src/virtual_cockpit/: VirtualCockpit.cpp  VirtualCockpit.h
